# mdq.py

./: README.md  mdq.py  pyproject.toml
.github/workflows/: test.yml
test/: test_mdq.py
